--- a/complete/dispatched.html
+++ b/complete/dispatched.html
@@ -502,7 +502,7 @@
                                               </tr>
                                               <tr>                                                    
                                                 <td class="kmTextBlockInner mobilePadding" style="border-collapse:collapse;mso-table-lspace:0;mso-table-rspace:0;table-layout:fixed;" valign="top">                                                      
-                                                  <table align="center" border="0" cellpadding="0" cellspacing="0" class="kmTextContentContainer" style="border-collapse:collapse;mso-table-lspace:0;mso-table-rspace:0;table-layout:fixed;outline: 2px solid #000;background-color: #faf9f9;" width="100%">                                                        
+                                                  <table align="center" border="0" cellpadding="0" cellspacing="0" class="kmTextContentContainer" style="border-collapse:collapse;mso-table-lspace:0;mso-table-rspace:0;table-layout:fixed;outline: 2px solid #000;background-color: #faf9f9;" width="90%">                                                        
                                                     <tbody>                                                          
                                                       <tr>                                                            
                                                         <td class="kmTextContent" style="border-collapse:collapse;mso-table-lspace:0;mso-table-rspace:0;table-layout:fixed;color:#222;font-family:'Helvetica Neue', Arial;font-size:14px;line-height:1.3;letter-spacing:0;text-align:center;max-width:100%;word-wrap:break-word; " valign="top">                                                              
@@ -593,7 +593,7 @@
                                                   <table align="left" border="0" cellpadding="0" cellspacing="0" class="kmTextContentContainer" style="border-collapse:collapse;mso-table-lspace:0;mso-table-rspace:0;table-layout:fixed;" width="100%">                                                        
                                                     <tbody>                                                          
                                                       <tr>                                                            
-                                                        <td style="padding:0 18px;font-family:Helvetica, serif;text-align:center;">                                                              
+                                                        <td style="padding:18px;font-family:Helvetica, serif;text-align:center;">                                                              
                                                         </td>
                                                       </tr>
                                                     </tbody>
